testdata/language-features/guard/guard12.reject.out
type error: can not unify
[32m'Char[m
with
[32m()[m

in testdata/language-features/guard/guard12.reject.lc:1:13:
fun x | x = () | otherwise = 'a'
            ^^

------------ trace
!type error: can not unify
[32m'Char[m
with
[32m()[m

in testdata/language-features/guard/guard12.reject.lc:1:13

------------ tooltips
testdata/language-features/guard/guard12.reject.lc 1:13-1:15  ()
testdata/language-features/guard/guard12.reject.lc 1:18-1:27  Bool
testdata/language-features/guard/guard12.reject.lc 1:18-1:33  Char
testdata/language-features/guard/guard12.reject.lc 1:30-1:33  Char
